# python-by-example

./: .dockerignore  .gitignore  Dockerfile  README.md  overrides.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
content/: 01 Intro.ipynb  02 Types, Variables, User input.ipynb  03 Conditionals.ipynb  03 Functions.ipynb  04 Conditionals.ipynb  04 Lists.ipynb  05 Lists.ipynb  05 Tuples.ipynb  06 Dictionaries.ipynb  06 Loops.ipynb  07 Dictionaries.ipynb  07 IO.ipynb  07 Loops.ipynb  08 Classes.ipynb  08 IO.ipynb  08 Sets.ipynb  09 Classes.ipynb  09 Comprehensions.ipynb  09 List comprehensions.ipynb  10 Functions.ipynb  11 IO.ipynb  12 Error Handling.ipynb  13 Classes.ipynb  Chapter 0 - Quick Tour.ipynb  Chapter 1 - Intro.ipynb  Chapter 10 - Classes.ipynb  Chapter 2 - Types.ipynb  Chapter 3 - Variables and Input.ipynb  Chapter 4 - Functions.ipynb  Chapter 5 - Conditionals.ipynb  Chapter 6 - Lists.ipynb  Chapter 7 - Loops.ipynb  Chapter 8 - Dictionaries.ipynb  Chapter 9 - IO (Input, Output).ipynb
content/assets/quizzes/: 01-intro-quiz.json  02-types-variables-input-quiz.json  03-functions-quiz.json  04-conditionals-quiz.json  05-lists-quiz.json  06-dictionaries-quiz.json  07-loops-quiz.json  08-io-quiz.json  09-classes-quiz.json
content/data/: employee_birthday.csv  people.csv  sales.csv
repl/: jupyter-lite.json
