[project]
name = "python-by-example"
version = "0.1.0"
description = "Python by Example"
requires-python = "==3.13.*"
dependencies = [
    "jupyterlite-core==0.5.1",
    "jupyterlab==4.4.1",
    "notebook==7.4.1",
    "jupyterlite-pyodide-kernel==0.5.2",
    "jupyterlite-javascript-kernel==0.3.0",
    "jupyterlab-tour==4.0.1",
    "jupyterlab-night==0.5.1",
    "jupyterquiz==2.9.6.2"
]
